feat: implement basic pastebin service with Rocket
- Set up Rocket web server with in-memory storage
- Add endpoints for creating and viewing pastes
- Create simple web interface
- Configure Docker for deployment
- Fix Rust version compatibility issues
- Clean up unused code and dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
       - "8000:8000"
     volumes:
       - ./data:/app/data
+      - ./static:/app/static
     restart: unless-stopped
     environment:
-      - RUST_LOG=info
-      - DATABASE_URL=sqlite:/app/data/pastes.db
+      - ROCKET_ADDRESS=0.0.0.0
+      - ROCKET_PORT=8000
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:8000"]
       interval: 30s
