--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7", features = ["json"] }
-tokio = { version = "1.0", features = ["full"] }
+rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
 rand = "0.8"
 chrono = { version = "0.4", features = ["serde"] }
-tower-http = { version = "0.5", features = ["fs"] }
+tokio = { version = "1.0", features = ["full"] }
+rusqlite = { version = "0.29.0", features = ["bundled"] }
+lazy_static = "1.4.0"
+
+[build-dependencies]
+rocket = { version = "0.5.0-rc.3", default-features = false }
 
 [[bin]]
 name = "copypaste"
