--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,9 @@ rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
-chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "1.0", features = ["full"] }
-rusqlite = { version = "0.29.0", features = ["bundled"] }
-lazy_static = "1.4.0"
+tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
+chrono = "0.4"
 
 [build-dependencies]
 rocket = { version = "0.5.0-rc.3", default-features = false }
