--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     build: .
@@ -12,6 +10,7 @@ services:
     environment:
       - ROCKET_ADDRESS=0.0.0.0
       - ROCKET_PORT=8000
+      - DATABASE_URL=sqlite:/app/data/pastes.db
     healthcheck:
       test: ["CMD", "wget", "--spider", "http://localhost:8000"]
       interval: 30s
