--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-rand = "0.8"
-tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
-sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
-chrono = "0.4"
+rocket = { version = "0.5.0-rc.3", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+nanoid = "0.4"
+async-trait = "0.1"
+thiserror = "1.0"
+lazy_static = "1.4"
 
-[build-dependencies]
-rocket = { version = "0.5.0-rc.3", default-features = false }
+[lib]
+name = "copypaste"
+path = "src/lib.rs"
 
 [[bin]]
 name = "copypaste"
