--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ nanoid = "0.4"
 async-trait = "0.1"
 thiserror = "1.0"
 lazy_static = "1.4"
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
 
 [lib]
 name = "copypaste"
@@ -18,3 +19,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "copypaste"
 path = "src/main.rs"
+
+[[bin]]
+name = "cpaste"
+path = "src/bin/cpaste.rs"
