--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,15 @@ reqwest = { version = "0.11", default-features = false, features = ["blocking", 
 rocket = { version = "0.5.0-rc.3", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+html-escape = "0.2"
+rand = "0.8"
+aes-gcm = { version = "0.10", features = ["aes"] }
+sha2 = "0.10"
+base64 = "0.21"
+pulldown-cmark = "0.10"
+chrono = { version = "0.4", features = ["serde", "clock"] }
 
 [lib]
 name = "copypaste"
