--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive"] }
 nanoid = "0.4"
-reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 rocket = { version = "0.5.0-rc.3", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 thiserror = "1.0"
@@ -20,6 +20,7 @@ sha2 = "0.10"
 base64 = "0.21"
 pulldown-cmark = "0.10"
 chrono = { version = "0.4", features = ["serde", "clock"] }
+urlencoding = "2.1"
 
 [lib]
 name = "copypaste"
