--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 html-escape = "0.2"
 rand = "0.8"
 aes-gcm = { version = "0.10", features = ["aes"] }
+chacha20poly1305 = "0.10"
 sha2 = "0.10"
 base64 = "0.21"
 pulldown-cmark = "0.10"
