--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ base64 = "0.21"
 pulldown-cmark = "0.10"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 urlencoding = "2.1"
+data-encoding = "2.4"
+hmac = "0.12"
+sha1 = "0.10"
 
 [lib]
 name = "copypaste"
