test: add coverage for attestation, handlers, and CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ data-encoding = "2.4"
 hmac = "0.12"
 sha1 = "0.10"
 
+[dev-dependencies]
+httpmock = "0.7"
+
 [lib]
 name = "copypaste"
 path = "src/lib.rs"
