--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-target-
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm ci
+
       - name: Check formatting
         run: cargo fmt --all -- --check
 
@@ -58,6 +69,18 @@ jobs:
 
       - name: Run test suite (nextest)
         run: cargo nextest run --workspace --all-features
+
+      - name: Frontend lint
+        working-directory: frontend
+        run: npm run lint
+
+      - name: Frontend unit tests
+        working-directory: frontend
+        run: npm test -- --run
+
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
 
       - name: Coverage (llvm-cov)
         run: |
