feat: improve Playwright installation and add Vercel deployment support
- Added conditional Playwright installation script that skips system dependencies on non-Linux platforms
- Created setup_vercel.sh script to automate Vercel CLI installation and project setup
- Updated prepare script in package.json to use new install_playwright.js
- Added .vercel to frontend/.gitignore for Vercel deployment files
- Added environment detection to skip Playwright installation during Vercel builds

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "test:e2e": "playwright test",
     "test:health": "playwright test tests/healthcheck.spec.ts --headed=false",
     "format": "prettier --check .",
-    "prepare": "playwright install --with-deps"
+    "prepare": "node ./scripts/install_playwright.js"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
