feat: enhance Fly.io deployment workflow with auth verification
- Added authentication check step before deployment using `flyctl auth whoami`
- Configured rolling deployment strategy for zero-downtime updates
- Added auto-confirm flag to enable non-interactive deployments
- Specified backend Dockerfile path explicitly for deployment

--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Set up Flyctl
         uses: superfly/flyctl-actions/setup-flyctl@v1
 
+      - name: Check Fly auth
+        run: flyctl auth whoami
+
       - name: Deploy app
         run: flyctl deploy --remote-only --strategy rolling --auto-confirm --dockerfile Dockerfile.backend
