feat: add steganography support for encrypted pastes
- Implemented LSB steganography to hide encrypted content within carrier images
- Added built-in gradient generators and support for user-uploaded carrier images
- Extended StoredContent enum with Stego variant to store carrier metadata and payload digest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ aes-gcm = { version = "0.10", features = ["aes"] }
 chacha20poly1305 = "0.10"
 sha2 = "0.10"
 base64 = "0.21"
+image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
 pulldown-cmark = "0.10"
 chrono = { version = "0.4", features = ["serde", "clock"] }
 urlencoding = "2.1"
