feat: add Ed25519 authentication for paste ownership
- Implemented challenge-response authentication using Ed25519 signatures
- Added owner_pubkey_hash and access_count fields to paste metadata for ownership tracking
- Created /api/auth/challenge and /api/auth/login endpoints for session management

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ data-encoding = "2.4"
 hmac = "0.12"
 sha1 = "0.10"
 hex = "0.4"
+ed25519-dalek = { version = "2.0", features = ["serde"] }
 
 [dev-dependencies]
 httpmock = "0.7"
