--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "monaco-editor": "^0.52.0",
+    "@noble/ed25519": "^1.7.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.0.2",
