--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@noble/ed25519": "^1.7.3",
     "@tanstack/react-query": "^5.62.2",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "monaco-editor": "^0.52.0",
-    "@noble/ed25519": "^1.7.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.0.2",
@@ -51,13 +51,14 @@
     "globals": "^16.4.0",
     "jsdom": "^27.1.0",
     "msw": "^2.6.15",
+    "playwright": "^1.56.1",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
-    "vitest": "^4.0.6",
-    "playwright": "^1.56.1"
+    "vite-plugin-mkcert": "^1.17.9",
+    "vitest": "^4.0.6"
   }
 }
