--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "mermaid": "^11.12.1",
     "monaco-editor": "^0.52.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
