--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -40,3 +40,20 @@ jobs:
 
       - name: Deploy app
         run: flyctl deploy --remote-only --strategy rolling --auto-confirm --dockerfile Dockerfile.backend
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: frontend
+        run: npm ci
+
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
+        env:
+          VITE_API_BASE: https://copypaste-fyi-withered-darkness-575.fly.dev/api
