feat: add OCaml crypto verifier service
- Implemented standalone OCaml service for cryptographic verification (AES-256-GCM, ChaCha20-Poly1305, Ed25519)
- Integrated multi-stage Docker build to deploy both Rust backend and OCaml verifier in single container
- Added CI workflow for OCaml service with build, test, and Docker validation steps

--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -9,6 +9,7 @@ on:
       - 'Cargo.lock'
       - 'Cargo.toml'
       - 'src/**'
+      - 'ocaml-crypto-verifier/**'
       - '.github/workflows/deploy-fly.yml'
   workflow_dispatch: {}
 
