--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive"] }
+env_logger = "0.10"
+log = "0.4"
 nanoid = "0.4"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 rocket = { version = "0.5.0-rc.3", features = ["json"] }
