--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ html-escape = "0.2"
 rand = "0.8"
 aes-gcm = { version = "0.10", features = ["aes"] }
 chacha20poly1305 = "0.10"
+pqc_kyber = "0.7"
 sha2 = "0.10"
 base64 = "0.21"
 image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
