Use conditional ounit2 dependency in test
- Add :with-test flag to ounit2 in test libraries
- ounit2 only included when building/running tests
- Keeps package dependencies cleaner

--- a/ocaml-crypto-verifier/test/dune
+++ b/ocaml-crypto-verifier/test/dune
@@ -2,5 +2,5 @@
  (name crypto_verifier_test)
  (libraries
    crypto_verifier
-   ounit2)
+   (ounit2 :with-test))
  (preprocess (pps ppx_deriving_yojson)))
