--- a/ocaml-crypto-verifier/crypto_verifier.opam
+++ b/ocaml-crypto-verifier/crypto_verifier.opam
@@ -16,6 +16,7 @@ depends: [
   "dune" {>= "3.7"}
   "mirage-crypto" {>= "0.11.0"}
   "mirage-crypto-rng" {>= "0.11.0"}
+  "mirage-crypto-ec" {>= "0.11.0"}
   "cohttp-lwt-unix" {>= "5.0.0"}
   "cohttp" {>= "5.0.0"}
   "lwt" {>= "5.6.0"}
