--- a/ocaml-crypto-verifier/crypto_verifier.opam
+++ b/ocaml-crypto-verifier/crypto_verifier.opam
@@ -17,6 +17,7 @@ depends: [
   "mirage-crypto-rng" {>= "0.11.0"}
   "yojson" {>= "2.0.0"}
   "ppx_deriving_yojson" {>= "3.7.0"}
+  "ounit2" {>= "2.2.0"}
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
