test: add comprehensive unit tests for Redis, rendering, and steganography modules
- Added Redis adapter tests covering HTTP authorization, key operations, and save/load/delete flows
- Added rendering tests for paste views, time-locking, attestation prompts, and format helpers
- Added steganography tests for data URI parsing, payload embedding, and carrier validation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ ed25519-dalek = { version = "2.0", features = ["serde"] }
 
 [dev-dependencies]
 httpmock = "0.7"
+regex = "1.11"
 
 [lib]
 name = "copypaste"
