refactor: add type annotations and improve OCaml code formatting
- Added explicit type annotations to function parameters and return types for better type safety
- Reformatted test file with consistent indentation and structure
- Added unix library dependency and OCaml build artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ frontend/node_modules/
 frontend/dist/
 frontend/.vite/
 frontend/coverage/
+
+# OCaml dune builds
+ocaml-crypto-verifier/_build/
 frontend/playwright-report/
 frontend/test-results/
 
