--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ ed25519-dalek = { version = "2.0", features = ["serde"] }
 [dev-dependencies]
 httpmock = "0.7"
 regex = "1.11"
+once_cell = "1.19"
 
 [lib]
 name = "copypaste"
