fix: correct OCaml binary path and optimize Docker builds
- Fix OCaml binary path from 'server' to 'crypto_verifier_server' in both Dockerfiles
- Add dependency layer caching for faster rebuilds (2-5 min vs 15-20 min)
- Optimize .dockerignore to reduce context size
- Add Docker optimization documentation

--- a/.dockerignore
+++ b/.dockerignore
@@ -68,3 +68,27 @@ frontend/**/*.sln
 frontend/**/*.sw?
 frontend/**/.vercel
 fly.toml
+
+# Git and CI
+.git
+.github
+.gitignore
+
+# Documentation and tests
+*.md
+!README.md
+tests/
+frontend/tests/
+
+# Development files
+.env
+.env.*
+*.log
+server.log
+frontend.log
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
