feat: add fly.toml validation to CI and pre-commit checks
- Added validation step in GitHub Actions deploy workflow to catch configuration errors before deployment
- Integrated flyctl config validation into pre-commit script with graceful fallback when flyctl is not installed

--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Check Fly auth
         run: flyctl auth whoami
 
+      - name: Validate fly.toml
+        run: flyctl config validate
+
       - name: Deploy app
         run: flyctl deploy --remote-only --strategy rolling --auto-confirm --dockerfile Dockerfile.backend
 
