--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -43,7 +43,12 @@ jobs:
         run: flyctl config validate
 
       - name: Deploy app
-        run: flyctl deploy --remote-only --strategy rolling --auto-confirm --dockerfile Dockerfile.backend
+        run: |
+          export GIT_COMMIT=$(git rev-parse --short HEAD)
+          export GIT_COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+          flyctl deploy --remote-only --strategy rolling --auto-confirm --dockerfile Dockerfile.backend \
+            --build-arg GIT_COMMIT="$GIT_COMMIT" \
+            --build-arg GIT_COMMIT_MESSAGE="$GIT_COMMIT_MESSAGE"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
