--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -48,8 +48,8 @@ WORKDIR /app/ocaml-crypto-verifier
 # Copy only dependency files first for better caching
 COPY ocaml-crypto-verifier/dune-project ocaml-crypto-verifier/crypto_verifier.opam ./
 
-# Install dependencies (cached layer)
-RUN opam install . --deps-only --yes
+# Install system dependencies via opam depext, then install OCaml dependencies
+RUN opam depext -y . && opam install . --deps-only --yes
 
 # Now copy source code
 COPY ocaml-crypto-verifier/ ./
