refactor: streamline OCaml dependency installation in Dockerfile
- Removed redundant `opam depext` call since system dependencies are already installed via apt-get
- Added `opam update` to ensure package list is current before installing dependencies

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -48,8 +48,8 @@ WORKDIR /app/ocaml-crypto-verifier
 # Copy only dependency files first for better caching
 COPY ocaml-crypto-verifier/dune-project ocaml-crypto-verifier/crypto_verifier.opam ./
 
-# Install system dependencies via opam depext, then install OCaml dependencies
-RUN opam depext -y . && opam install . --deps-only --yes
+# Update opam and install OCaml dependencies (system deps already installed above)
+RUN opam update && opam install . --deps-only --yes
 
 # Now copy source code
 COPY ocaml-crypto-verifier/ ./
