--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ log = "0.4"
 nanoid = "0.4"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "json"] }
 rocket = { version = "0.5.0-rc.3", features = ["json"] }
+utoipa = { version = "4.2", features = ["chrono", "preserve_order"] }
+utoipa-scalar = { version = "0.1", features = ["rocket"] }
+once_cell = "1.19"
 tokio = { version = "1.0", features = ["full"] }
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
