--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -95,6 +95,9 @@ exit $?\n\
 
 ENV ROCKET_ADDRESS=0.0.0.0
 ENV ROCKET_PORT=8000
+# Set version info from build args
+ENV GIT_COMMIT=${GIT_COMMIT}
+ENV GIT_COMMIT_MESSAGE=${GIT_COMMIT_MESSAGE}
 EXPOSE 8000 8001
 
 CMD ["/usr/local/bin/start-services.sh"]
