--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -78,19 +78,29 @@ COPY --from=rust-builder /app/blockchain ./blockchain
 
 # Create a startup script to run both services
 RUN echo '#!/bin/bash\n\
-# Start OCaml crypto verifier in background\n\
-crypto-verifier &\n\
-CRYPTO_PID=$!\n\
-\n\
-# Start Rust backend in foreground\n\
-copypaste &\n\
-RUST_PID=$!\n\
-\n\
-# Wait for any process to exit\n\
-wait -n\n\
-\n\
-# Exit with the status of the process that exited first\n\
-exit $?\n\
+# Check which process Fly.io wants us to run\n\
+if [[ "${FLY_PROCESS_GROUP}" == "crypto-verifier" ]]; then\n\
+    echo "Starting OCaml crypto verifier..."\n\
+    exec crypto-verifier\n\
+elif [[ "${FLY_PROCESS_GROUP}" == "app" ]]; then\n\
+    echo "Starting Rust backend..."\n\
+    exec copypaste\n\
+else\n\
+    echo "No FLY_PROCESS_GROUP specified, starting both services..."\n\
+    # Start OCaml crypto verifier in background\n\
+    crypto-verifier &\n\
+    CRYPTO_PID=$!\n\
+    \n\
+    # Start Rust backend in foreground\n\
+    copypaste &\n\
+    RUST_PID=$!\n\
+    \n\
+    # Wait for any process to exit\n\
+    wait -n\n\
+    \n\
+    # Exit with the status of the process that exited first\n\
+    exit $?\n\
+fi\n\
 ' > /usr/local/bin/start-services.sh && chmod +x /usr/local/bin/start-services.sh
 
 ENV ROCKET_ADDRESS=0.0.0.0
@@ -100,4 +110,5 @@ ENV GIT_COMMIT=${GIT_COMMIT}
 ENV GIT_COMMIT_MESSAGE=${GIT_COMMIT_MESSAGE}
 EXPOSE 8000 8001
 
-CMD ["/usr/local/bin/start-services.sh"]
+# Fly.io will set FLY_PROCESS_GROUP to determine which service to run
+CMD if [ "$FLY_PROCESS_GROUP" = "crypto-verifier" ]; then crypto-verifier; else copypaste; fi
